--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Created by https://www.toptal.com/developers/gitignore/api/go
-# Edit at https://www.toptal.com/developers/gitignore?templates=go
-
-### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
@@ -23,9 +19,7 @@
 
 # Go workspace file
 go.work
+go.work.sum
 
-# End of https://www.toptal.com/developers/gitignore/api/go
-
-/config.local.hcl
-/bin/
+# env file
 .env
